--- a/index.html
+++ b/index.html
@@ -69,24 +69,26 @@
       <h2>Portfolio</h2>
       <div class="projects-container">
         <div class="project" id="p1">
-          <img src="./assets/img/projet-1.jpg" alt="projet 1" />
+          <img src="./assets/img/heliumCssImg.png" alt="projet 1" />
           <div class="project-infos">
-            <a href="https://www.google.com" target="_blank">Lyon Beton</a>
-            <p>2020</p>
+            <a href="https://manda9988.github.io/heliumCSS/" target="_blank"
+              >heliumCSS</a
+            >
+            <p>2023</p>
           </div>
         </div>
         <div class="project" id="p2">
           <img src="./assets/img/projet-2.jpg" alt="projet 2" />
           <div class="project-infos">
-            <a href="https://www.google.com" target="_blank">Casta</a>
-            <p>2021</p>
+            <a href="https://www.google.com" target="_blank">Soon</a>
+            <p>2023</p>
           </div>
         </div>
         <div class="project" id="p3">
           <img src="./assets/img/projet-3.jpg" alt="projet 3" />
           <div class="project-infos">
-            <a href="https://www.google.com" target="_blank">Everpost</a>
-            <p>2022</p>
+            <a href="https://www.google.com" target="_blank">Soon</a>
+            <p>2023</p>
           </div>
         </div>
       </div>
